// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`application generator should set up project correctly for cypress 1`] = `
"{
  "root": true,
  "ignorePatterns": ["**/*"],
  "plugins": ["@nx"],
  "overrides": [
    {
      "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "enforceBuildableLibDependency": true,
            "allow": [],
            "depConstraints": [
              {
                "sourceTag": "*",
                "onlyDependOnLibsWithTags": ["*"]
              }
            ]
          }
        ]
      }
    },
    {
      "files": ["*.ts", "*.tsx"],
      "extends": ["plugin:@nx/typescript"],
      "rules": {}
    },
    {
      "files": ["*.js", "*.jsx"],
      "extends": ["plugin:@nx/javascript"],
      "rules": {}
    }
  ]
}
"
`;

exports[`application generator should set up project correctly for cypress 2`] = `null`;

exports[`application generator should set up project correctly for cypress 3`] = `
"{
  "extends": [
    "plugin:vue/vue3-essential",
    "eslint:recommended",
    "@vue/eslint-config-typescript",
    "@vue/eslint-config-prettier/skip-formatting",
    "../.eslintrc.json"
  ],
  "ignorePatterns": [
    "!**/*",
    "**/vite.config.*.timestamp*",
    "**/vitest.config.*.timestamp*"
  ],
  "overrides": [
    {
      "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
      "rules": {
        "vue/multi-word-component-names": "off"
      }
    }
  ]
}
"
`;

exports[`application generator should set up project correctly for cypress 4`] = `
"import { describe, it, expect } from 'vitest';
import { mount } from '@vue/test-utils';
import App from './App.vue';

describe('App', () => {
  it('renders properly', async () => {
    const wrapper = mount(App, {});
    expect(wrapper.text()).toContain('Welcome test 👋');
  });
});
"
`;

exports[`application generator should set up project correctly for cypress 5`] = `
"import { nxE2EPreset } from '@nx/cypress/plugins/cypress-preset.js';
import { defineConfig } from 'cypress';
export default defineConfig({
  e2e: {
    ...nxE2EPreset(import.meta.dirname, {
      cypressDir: 'src',
      bundler: 'vite',
      webServerCommands: {
        default: 'npx nx run test:dev',
        production: 'npx nx run test:preview',
      },
      ciWebServerCommand: 'npx nx run test:preview',
      ciBaseUrl: 'http://localhost:4300',
    }),
    baseUrl: 'http://localhost:4200',
  },
});
"
`;

exports[`application generator should set up project correctly for rsbuild 1`] = `
"/// <reference types='vitest' />
import { defineConfig } from 'vite';
import vue from '@vitejs/plugin-vue';
import { nxViteTsPaths } from '@nx/vite/plugins/nx-tsconfig-paths.plugin';
import { nxCopyAssetsPlugin } from '@nx/vite/plugins/nx-copy-assets.plugin';

export default defineConfig(() => ({
  root: import.meta.dirname,
  cacheDir: '../node_modules/.vite/test',
  plugins: [vue(), nxViteTsPaths(), nxCopyAssetsPlugin(['*.md'])],
  // Uncomment this if you are using workers.
  // worker: {
  //   plugins: () => [ nxViteTsPaths() ],
  // },
  test: {
    name: 'test',
    watch: false,
    globals: true,
    environment: 'jsdom',
    include: ['{src,tests}/**/*.{test,spec}.{js,mjs,cjs,ts,mts,cts,jsx,tsx}'],
    reporters: ['default'],
    coverage: {
      reportsDirectory: '../coverage/test',
      provider: 'v8' as const,
    },
  },
}));
"
`;

exports[`application generator should set up project correctly for rsbuild 3`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  ".vscode/extensions.json",
  "nx.json",
  "package.json",
  "test-e2e/.eslintrc.json",
  "test-e2e/playwright.config.cts",
  "test-e2e/project.json",
  "test-e2e/src/example.spec.ts",
  "test-e2e/tsconfig.json",
  "test/.eslintrc.json",
  "test/index.html",
  "test/project.json",
  "test/rsbuild.config.ts",
  "test/src/app/App.spec.ts",
  "test/src/app/App.vue",
  "test/src/app/NxWelcome.vue",
  "test/src/main.ts",
  "test/src/styles.css",
  "test/src/vue-shims.d.ts",
  "test/tsconfig.app.json",
  "test/tsconfig.json",
  "test/tsconfig.spec.json",
  "test/vitest.config.mts",
  "tsconfig.base.json",
  "vitest.workspace.ts",
]
`;

exports[`application generator should set up project correctly with given options 1`] = `
"{
  "root": true,
  "ignorePatterns": ["**/*"],
  "plugins": ["@nx"],
  "overrides": [
    {
      "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
      "rules": {
        "@nx/enforce-module-boundaries": [
          "error",
          {
            "enforceBuildableLibDependency": true,
            "allow": [],
            "depConstraints": [
              {
                "sourceTag": "*",
                "onlyDependOnLibsWithTags": ["*"]
              }
            ]
          }
        ]
      }
    },
    {
      "files": ["*.ts", "*.tsx"],
      "extends": ["plugin:@nx/typescript"],
      "rules": {}
    },
    {
      "files": ["*.js", "*.jsx"],
      "extends": ["plugin:@nx/javascript"],
      "rules": {}
    }
  ]
}
"
`;

exports[`application generator should set up project correctly with given options 2`] = `null`;

exports[`application generator should set up project correctly with given options 3`] = `
"{
  "extends": [
    "plugin:vue/vue3-essential",
    "eslint:recommended",
    "@vue/eslint-config-typescript",
    "@vue/eslint-config-prettier/skip-formatting",
    "../.eslintrc.json"
  ],
  "ignorePatterns": [
    "!**/*",
    "**/vite.config.*.timestamp*",
    "**/vitest.config.*.timestamp*"
  ],
  "overrides": [
    {
      "files": ["*.ts", "*.tsx", "*.js", "*.jsx", "*.vue"],
      "rules": {
        "vue/multi-word-component-names": "off"
      }
    }
  ]
}
"
`;

exports[`application generator should set up project correctly with given options 4`] = `
"import { describe, it, expect } from 'vitest';
import { mount } from '@vue/test-utils';
import App from './App.vue';

describe('App', () => {
  it('renders properly', async () => {
    const wrapper = mount(App, {});
    expect(wrapper.text()).toContain('Welcome test 👋');
  });
});
"
`;

exports[`application generator should set up project correctly with given options 5`] = `
"const { defineConfig, devices } = require('@playwright/test');
const { nxE2EPreset } = require('@nx/playwright/preset');
const { workspaceRoot } = require('@nx/devkit');

// For CI, you may want to set BASE_URL to the deployed application.
const baseURL = process.env['BASE_URL'] || 'http://localhost:4300';

/**
 * Read environment variables from file.
 * https://github.com/motdotla/dotenv
 */
// require('dotenv').config();

/**
 * See https://playwright.dev/docs/test-configuration.
 *
 * Generated as a .cts file so Node forces CommonJS regardless of workspace
 * \`type: "module"\`. Keeps the file loadable under both Nx's native TS strip
 * and Playwright's pirates-based runtime loader (which compiles ESM-shape
 * \`.ts\` configs to CJS but leaves \`import.meta\` intact, causing Node to
 * re-detect ESM and explode with \`exports is not defined\`). Playwright
 * auto-discovers \`playwright.config.cts\` via its configLoader extension
 * list (.ts/.js/.mts/.mjs/.cts/.cjs).
 */
module.exports = defineConfig({
  ...nxE2EPreset(__filename, { testDir: './src' }),
  /* Shared settings for all the projects below. See https://playwright.dev/docs/api/class-testoptions. */
  use: {
    baseURL,
    /* Collect trace when retrying the failed test. See https://playwright.dev/docs/trace-viewer */
    trace: 'on-first-retry',
  },
  /* Run your local dev server before starting the tests */
  webServer: {
    command: 'npx nx run test:preview',
    url: 'http://localhost:4300',
    reuseExistingServer: true,
    cwd: workspaceRoot,
  },
  projects: [
    {
      name: 'chromium',
      use: { ...devices['Desktop Chrome'] },
    },

    {
      name: 'firefox',
      use: { ...devices['Desktop Firefox'] },
    },

    {
      name: 'webkit',
      use: { ...devices['Desktop Safari'] },
    },

    // Uncomment for mobile browsers support
    /* {
      name: 'Mobile Chrome',
      use: { ...devices['Pixel 5'] },
    },
    {
      name: 'Mobile Safari',
      use: { ...devices['iPhone 12'] },
    }, */

    // Uncomment for branded browsers
    /* {
      name: 'Microsoft Edge',
      use: { ...devices['Desktop Edge'], channel: 'msedge' },
    },
    {
      name: 'Google Chrome',
      use: { ...devices['Desktop Chrome'], channel: 'chrome' },
    } */
  ],
});
"
`;

exports[`application generator should set up project correctly with given options 6`] = `
[
  ".eslintignore",
  ".eslintrc.json",
  ".gitignore",
  ".prettierignore",
  ".prettierrc",
  ".vscode/extensions.json",
  "nx.json",
  "package.json",
  "test-e2e/.eslintrc.json",
  "test-e2e/playwright.config.cts",
  "test-e2e/project.json",
  "test-e2e/src/example.spec.ts",
  "test-e2e/tsconfig.json",
  "test/.eslintrc.json",
  "test/index.html",
  "test/project.json",
  "test/src/app/App.spec.ts",
  "test/src/app/App.vue",
  "test/src/app/NxWelcome.vue",
  "test/src/main.ts",
  "test/src/styles.css",
  "test/src/vue-shims.d.ts",
  "test/tsconfig.app.json",
  "test/tsconfig.json",
  "test/tsconfig.spec.json",
  "test/vite.config.mts",
  "tsconfig.base.json",
  "vitest.workspace.ts",
]
`;
